apps/base/isa-devops-api-polytech/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isa-api-polytech
  labels:
    toolkit.fluxcd.io/tenant: dev-team
